# first-agent

./: .env.txt  .gitignore  agent.py  api.py  langgraph.json  main.py  pyproject.toml
.github/workflows/: backend-ci.yml  backend-ci.yml 
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
src/: agent.py
src/api/: api.py
src/tests/: test_health.py
